--- a/WelcomeScreen.html
+++ b/WelcomeScreen.html
@@ -276,9 +276,9 @@ body {
         <div class="menu-item" onclick="loadScreen('logintime.html',this)">
      <i class="bi bi-stopwatch"></i> Login Times
         </div>
-        <div class="menu-item" onclick="loadScreen('employeeattendence.html',this)">
+        <!-- <div class="menu-item" onclick="loadScreen('employeeattendence.html',this)">
      <i class="bi bi-calendar-check"></i>  Employee Attendence
-        </div>
+        </div> -->
         <div class="menu-item" onclick="loadScreen('employeework.html',this)">
           <i class="bi bi-people-fill"></i> Employee Works
         </div>
