--- a/WelcomeScreen.html
+++ b/WelcomeScreen.html
@@ -274,7 +274,7 @@ body {
       <!-- MENU -->
       <div class="menu-list">
         <div class="menu-item" onclick="loadScreen('logintime.html',this)">
-     <i class="bi bi-stopwatch"></i> Login Times
+     <i class="bi bi-stopwatch"></i> Attendence
         </div>
         <!-- <div class="menu-item" onclick="loadScreen('employeeattendence.html',this)">
      <i class="bi bi-calendar-check"></i>  Employee Attendence
